force-app/main/default/objects/Integration_Version__c/Integration_Version__c.object-meta.xml
<CustomObject>
    <label>Integration Version</label>
    <nameField>
        <displayFormat>INT-VER-{0000}</displayFormat>
        <label>Integration Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>