force-app/main/default/objects/Integration_Version__c/fields/Activated_By__c.field-meta.xml
<CustomField>
    <fullName>Activated_By__c</fullName>
    <label>Activated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>