force-app/main/default/objects/Integration_Version__c/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <label>Change Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>