force-app/main/default/objects/Integration_Version__c/fields/Configuration_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Snapshot__c</fullName>
    <label>Configuration Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>