force-app/main/default/objects/Integration_Version__c/fields/Rollback_Version__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollback Version</label>
    <referenceTo>Integration_Version__c</referenceTo>
    <relationshipLabel>Rollback Versions</relationshipLabel>
    <relationshipName>Rollback_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>